Actualización de index.html y Tabla.html

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <area
         shape="rect"
         coords="525,129,679,163"
-        href="file:///F:/DAWUNIR/LENGUAJES%20DE%20MARCAS%20Y%20SISTEMAS%20DE%20GESTI%C3%93N%20DE%20INFORMACI%C3%93N/ACTIVIDADES/ACTIVIDAD%202/breaking%20bad/Formulario.html"
+        href="Formulario.html"
         target="_blank"
       />
       <area
         shape="rect"
         coords="517, 153, 680, 182"
-        href="file:///F:/DAWUNIR/LENGUAJES%20DE%20MARCAS%20Y%20SISTEMAS%20DE%20GESTI%C3%93N%20DE%20INFORMACI%C3%93N/ACTIVIDADES/ACTIVIDAD%202/breaking%20bad/Tabla.html"
+        href="Tabla.html"
         target="_blank"
       />
     </map>
